<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!!!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_use_location">Use Location</string>
    <string name="action_share">Share</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">Layton,US</string>

    <string name="pref_temp_label">Temperature Units</string>
    <string name="pref_temp_key">temp</string>
    <string name="pref_temp_default">Fahrenheit</string>
    <string-array name="pref_temp_string_array">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>
</resources>
