<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:title="@string/pref_temp_label"
        android:dialogTitle="@string/pref_temp_label"
        android:summary="%s"
        android:key="@string/pref_temp_key"
        android:defaultValue="@string/pref_temp_default"
        android:entries="@array/pref_temp_string_array"
        android:entryValues="@array/pref_temp_string_array"
        />

</PreferenceScreen>